sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:22: error: ')' expected but '}' found.
  }while((gap>1)||(echange==true))
  ^