sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  var gap = getValueCount()
  var x = getValueCount()
  var echange = true
  
  do{
    
    echange = false;
    
    if(gap>1){gap = (gap.toDouble / 1.3).toInt;}
    
    for (i<- 0 to getValueCount-gap-1{
      
      if (isSmallerThan(i+gap, i)){
        echange=true;
        swap(i, i+gap);
      }
    } 
    
  }while((gap>1)||(echange==true))
}